# eggtimer

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
egg_timer/: __init__.py  egg_timer.py  eggtimer.py
eggtimer/: __init__.py
tests/: test_egg_timer.py  test_eggtimer.py
