[tool.black]
line-length = 100

[tool.isort]
known_first_party = "egg_timer"
line_length = 100
### for compatibility with black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob="**/__init__.py"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s.%(funcName)s.%(lineno)d: %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-v --capture=sys tests"
norecursedirs = "node_modules dist"

[tool.vulture]
paths = ["egg_timer"]

[tool.poetry]
name = "egg-timer"
version = "v1.1.0"
description = "A simpler way to handle timeouts in Python"
authors = ["Mike Salvatore <mike.s.salvatore@gmail.com>"]
license = "GPLv3"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
repository = "https://github.com/mssalvatore/egg-timer"
readme = "README.md"
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"
pynvim = "^0.4.3"
isort = "^5.10.1"
mypy = "^0.940"
pudb = "^2022.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
